
[tool.ruff]
src = [
    "reno"
]
lint.select = [
    "D", # pydocstyle
    # "DOC", # pydoclint (only in preview mode)
    "E", # pycodestyle
    "I", # isort
    "F", # pyflakes
    "ANN", # flake8 annotations
    "Q", # flake8 quotes
    "SIM", # flake8 simplify
    "PTH", # flake8 pathlib
    "FA", # flake8 future annotations
    "UP", # pyupgrade
    "RUF", # ruff
    "C90", # mccabe complexity
]
lint.ignore = [
    "D205", # 1 blank line required between summary line and description
    "RUF013", # PEP 484 prohibits implicit `Optional` (can't implicitly default something to None)
]
lint.pydocstyle.convention = "google"
target-version = "py311"
format.docstring-code-format = true
line-length = 88
flake8-annotations.mypy-init-return = true  # don't require return type annotation on init




# [tool.isort]
# profile = "black"
#
# [tool.pylint]
# # W0612: unused-variable (I trust black/flake8's unused variable rules more.)
# # W0613: unused-argument
# # W0511: fixme  (it's okay for some todos to stick around)
# # W0223: abstract-method (tentatively disabling this, complaining about no copy/deepcopy on widget classes
# # W0622: redefined-builtin (Somewhat unavoidable for things like 'sum' and 'abs', but numpy does it so I'm allowed too)
# # W0212: protected-access (I label functions with _ so that code _outside_ the library knows not to use them, internal is fine.)
# # C0103: invalid-name (it doesn't like 'df', but this is convention.)
# # C0301: line-too-long (black will fix line length where necessary.)
# # C0302: too-many-lines (over-splitting code into sep modules leads to circular refs)
# # E1120: no-value-for-parameter (curifactory stages expect not passing function arguments.)
# # I1101: c-extension-no-member (don't penalize not having python source?)
# # R0903: too-few-public-methods (what a BS complaint.)
# # R0914: too-many-locals (I disagree that this is a useful measure of complexity.)
# # R1735: use-dict-literal (strongly disagree, I prefer dict(some="thing") to {"some": "thing"}
# # R0901: too-many-ancestors (can't help it, have to extend widget which has a long chain)
# # R0902: too-many-instance-attributes (vuetify widgets use attributes to comm to js, this is required)
# # R0913: too-many-arguments (look, parameterization has to occur _somewhere_.)
# # W0702: bare-except (flake8 already handles)
# disable = ["W0613", "W0511", "R1735", "C0103", "C0301", "C0302", "E1120", "I1101", "R0903", "W0612", "R0914", "R0901", "R0902", "W0223", "R0913", "W0622", "W0212", "W0702"]
#
# [tool.pylint.MASTER]
# ignore-paths = "^sphinx/.*$,^tests/.*$"
#

[tool.setuptools]
packages = ["reno"]

[tool.setuptools.package-data]
reno = ["res/*.vue", "res/*.js"]

[tool.setuptools.dynamic]
version = {attr = "reno.__version__"}

[project]
name = "reno-sd"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "panel<1.8",
    "pymc",
    "matplotlib",
    "selenium",
    "ipyvuetify",
    "graphviz"
]
requires-python = ">=3.11"  # pymc/pytensor was initially having issues with 3.14
readme = "README.md"
authors = [
    {name = "Nathan Martindale, Jordan Stomps, Birdy Phathanapirom", email = "martindalena@ornl.gov"},
    # {name = "Jordan Stomps", email = "stompsjr@ornl.gov"},  # multiple authors not explicitly supported?
    # {name = "Birdy Phathanapirom", email = "birdy@ornl.gov"},
]
description = "System dynamics modeling with bayesian inference"
license = "BSD-3-clause"
license-files = ["LICENSE"]
keywords = ["system dynamics", "sdm", "simulation", "reno", "pymc", "bayesian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Repository = "https://github.com/ORNL/reno"
Changelog = "https://github.com/ORNL/reno/blob/main/CHANGELOG.md"
Issues = "https://github.com/ORNL/reno/issues"
Documentation = "https://ornl.github.io/reno/stable"

[project.scripts]
reno = "reno.explorer:main"
